--- a/lib/iqhd.yml
+++ b/lib/iqhd.yml
@@ -1,63 +1,63 @@
-HD:
-	impt:
-		iq_univs:
-			CourseVideos:
-			CourseDocs:
-			GenDocs:
-			Other:
-		iq_books:
-			Audiobooks:
-				todo:
-				done:
-			Actual books:
-				pdfs:
-					todo:
-					done:
-				epubs:
-					todo:
-					done:
-			Other:
-		iq_files:
-			Docs:
-			Recs:
-				talks:
-				svrs:
-			Other:
-		iq_photos:
-			personal:
-			others:
-	bkup:
-		iq_docus:
-			todo:
-			done:
-		iQ_movies:
-			Eng:
-				todo:
-				done:
-			Hin:
-				todo:
-				done:
-			Tam:
-				todo:
-				done:
-			Other:
-				todo:
-				done:
-		iq_music:
-			Eng:
-			Hin:
-			Tam:
-			Clips:
-			Classicals:
-			Other:
-		IQ_tools:
-			Softwares:
-				Utils:
-				Edits:
-		iq_images:
-			assorted:
-			peoples:
-	junk:
-		iq_series:
-			todo:
-			done:
+hd:
+  impt:
+    iq_univs:
+      coursevideos:
+      coursedocs:
+      gendocs:
+      other:
+    iq_books:
+      audiobooks:
+        todo:
+        done:
+      actual books:
+        pdfs:
+          todo:
+          done:
+        epubs:
+          todo:
+          done:
+      other:
+    iq_files:
+      docs:
+      recs:
+        talks:
+        svrs:
+      other:
+    iq_photos:
+      personal:
+      others:
+  bkup:
+    iq_docus:
+      todo:
+      done:
+    iq_movies:
+      eng:
+        todo:
+        done:
+      hin:
+        todo:
+        done:
+      tam:
+        todo:
+        done:
+      other:
+        todo:
+        done:
+    iq_music:
+      eng:
+      hin:
+      tam:
+      clips:
+      classicals:
+      other:
+    iq_tools:
+      softwares:
+        utils:
+        edits:
+    iq_images:
+      assorted:
+      peoples:
+  junk:
+    iq_series:
+      todo:
+      done:
